--- a/lab403.html
+++ b/lab403.html
@@ -10,7 +10,8 @@
   
   <h3>About Me</h3>
 
-  <a href="https://www.youtube.com/watch?v=PM9VSVX7dx8"</a>
+  <a>href="https://www.youtube.com/watch?v=PM9VSVX7dx8"</a>
+  
     <p>Just kidding</p>
   <h3>
     <p>I am a student at MSU Denver this semester working to get my GIS ccertificate! I find maps fascinating, and now that I have been working on creating them, I am even more enthralled! I am also a preschool teacher (which is stress central). I also have a big family and a dog and a cat. I am writing whatever comes into my mind because I get nervous talking about myself, but here we are. 
@@ -43,8 +44,8 @@
      </table>
     
   <p> For my final trick, I shall add one of my favorite history memes to my website (because I love history). These are screen grabs that were found on another website, but this is the meme. It is two parts.</p>
-    <img src="waterloo cannonball meme pt 1" />
-    <img src="waterloo cannonball meme pt2" />
+    <img> src="waterloo cannonball meme pt 1" </img>
+    <img> src="waterloo cannonball meme pt2" </img>
     
   <p>I have written more information about myself, and also added a meme and a website. Please, hold the applause. I hope I have provided more entertainment.</p>
   </h3>
