--- a/lab403.html
+++ b/lab403.html
@@ -19,7 +19,7 @@
    <li>Jujutsu Kaisen :(</li>
 </ul>
 
-<h3>I also enjoy name generators, such as this: <a href="https://www.eggradients.com/tool/benedict-cumberbatch-name-generator"> the Benedict Cumberbatch Name Generator</h3>
+<h3>I also enjoy name generators, such as this: <a href="https://www.eggradients.com/tool/benedict-cumberbatch-name-generator"</a> the Benedict Cumberbatch Name Generator</h3>
     
 <h3><p> For my next trick, I shall attempt... (drumroll please) a table of all the animes I need to watch. It will probably never be finished and I will definitely not add the entire thing since it is very long.</p></h3>
        
