--- a/lab502.html
+++ b/lab502.html
@@ -1,13 +1,13 @@
 <DOCTYPE html>
 <html>
 <head>
-  <title>My fourth web page.</title>
+  <title>My 5th web page.</title>
   </head>
   
 <body>
-  <h1> WHOA! A web page!</h1>
+  <div font-color: blue><h1> WHOA! A web page!</h1></div>
   
-  <p>This is my fourth web page for Web Mapping and my fifth lab at MSU Denver. Boom, boom.</p>
+  <p>This is my 5th web page for Web Mapping and my fifth lab at MSU Denver. Boom, boom.</p>
 
   <div id="container">
   <h3>About Me</h3>
