--- a/lab502.html
+++ b/lab502.html
@@ -5,7 +5,7 @@
   </head>
   
 <body>
-  <div font-color: blue><h1> WHOA! A web page!</h1></div>
+ <div h1.intro {color: blue}> WHOA! A web page!</div>
   
   <p>This is my 5th web page for Web Mapping and my fifth lab at MSU Denver. Boom, boom.</p>
 
@@ -17,12 +17,14 @@
         I shall now put some information into a list for you. These are three activites that I love.</p>
 
     <div id="Things I like">
+      <
      <ul>
    <li>Reading</li>
    <li>Painting</li>
    <li>Jujutsu Kaisen :(</li>
      </ul>
     </div>
+  </div>
     
 <h3><p> For my next trick, I shall attempt... (drumroll please) a table of all the animes I need to watch. It will probably never be finished and I will definitely not add the entire thing since it is very long.</p></h3>
 
@@ -60,6 +62,6 @@
   <p>I have written more information about myself. Please, hold the applause. I hope I have provided more entertainment.</p>
   </h3>
 
-</div>
+
 </body>
 </html>
