--- a/lab502.html
+++ b/lab502.html
@@ -2,10 +2,41 @@
 <html>
 <head>
   <title>My 5th web page.</title>
+  <style>
+    body { width: 100%;}
+    #container {
+      70%;
+      text-align: center;
+      margin: 10px auto;
+    }
+    #photo {
+      background-color: #DAD5D5;
+      margin-left: auto;
+      margin-right: 0;
+      margin-top: auto
+      margin-bottom: 0;
+      width: 400px; 
+    }
+    #circles {
+      height: auto;
+      width: 250px;
+      border: 1px solid #000000;
+      border-radius: 50%;
+      padding: 5px;
+      display: block;
+      margin: auto;
+    }
+    .caption {
+      font-size: 10px;
+      font-text: ComicSans;
+      text-align: center;
+    }
+      
+  </style>
   </head>
   
 <body>
- <div h1.intro {color: blue}> WHOA! A web page!</div>
+ <div> <h1> {color: blue} WHOA! A web page!</h1></div>
   
   <p>This is my 5th web page for Web Mapping and my fifth lab at MSU Denver. Boom, boom.</p>
 
@@ -17,7 +48,6 @@
         I shall now put some information into a list for you. These are three activites that I love.</p>
 
     <div id="Things I like">
-      <
      <ul>
    <li>Reading</li>
    <li>Painting</li>
@@ -26,9 +56,10 @@
     </div>
   </div>
     
-<h3><p> For my next trick, I shall attempt... (drumroll please) a table of all the animes I need to watch. It will probably never be finished and I will definitely not add the entire thing since it is very long.</p></h3>
+<h4><p> For my next trick, I shall attempt... (drumroll please) a table of animes I need to watch. It will probably never be finished and I will definitely not add the entire thing since it is very long.</p></h4>
 
     <div id="Anime Progress">
+      #
       <table>
          <tr>
           <th>Anime Name</th>
@@ -54,7 +85,7 @@
     <div id="photo">
     <img id="circles" src="circles.png">
       <p class="caption">Circles<p/>
-      <p class="caption">Art by Me</p>
+      <p class="caption">Art by author</p>
     </div>
 
     <a href="https://www.eggradients.com/tool/benedict-cumberbatch-name-generator">the Benedict Cumberbatch Name Generator</a>
