--- a/lab502.html
+++ b/lab502.html
@@ -6,6 +6,7 @@
     body { width: 100%;}
     #title1 {
       font-color: blue;
+      text-weight: 28 pt;
     }
     #intro {
       70%;
@@ -14,8 +15,7 @@
     }
     #photo {
       background-color: #DAD5D5;
-      background-radius: 55%;
-      margin-left: auto;
+      align: center;
       width: 250px; 
     }
     #circles {
@@ -37,7 +37,7 @@
   </head>
   
 <body>
- <div id="title1"> <h1> WHOA! A web page!</h1></div>
+ <div id="title1"> WHOA! A web page!</div>
   
   <p>This is my 5th web page for Web Mapping and my fifth lab at MSU Denver. Boom, boom.</p>
 
