--- a/lab502.html
+++ b/lab502.html
@@ -3,20 +3,21 @@
 <head>
   <title>My 5th web page.</title>
   <style>
-    body { width: 100%;}
     #title1 {
-      font-color: blue;
-      text-weight: 28 pt;
+      text-weight: 28;
+      font-color: #008080;
     }
+    </style>
+  <style>
+    body { width: 100%;}
     #intro {
       70%;
       text-align: center;
       margin: 10px auto;
     }
     #photo {
-      background-color: #DAD5D5;
       align: center;
-      width: 250px; 
+      width: 400px; 
     }
     #circles {
       height: 500px;
