--- a/lab502.html
+++ b/lab502.html
@@ -2,12 +2,7 @@
 <html>
 <head>
   <title>My 5th web page.</title>
-  <style>
-    #title1 {
-      text-weight: 28;
-      font-color: #008080;
-    }
-    </style>
+
   <style>
     body { width: 100%;}
     #intro {
@@ -16,16 +11,14 @@
       margin: 10px auto;
     }
     #photo {
-      align: center;
-      width: 400px; 
+      align: center; 
     }
     #circles {
-      height: 500px;
-      width: 250px;
+      height: 700px;
+      width: 500px;
       border: 1px solid #000000;
       border-radius: 50%;
       padding: 5px;
-      display: block;
       margin: auto;
     }
     .caption {
@@ -38,7 +31,7 @@
   </head>
   
 <body>
- <div id="title1"> WHOA! A web page!</div>
+ <div><h1>WHOA! A web page!</h1></div>
   
   <p>This is my 5th web page for Web Mapping and my fifth lab at MSU Denver. Boom, boom.</p>
 
