--- a/lab502.html
+++ b/lab502.html
@@ -5,6 +5,10 @@
 
   <style>
     body { width: 100%;}
+    #begin {
+      font-size: 30px;
+      font-color: #800080;
+    }
     #intro {
       70%;
       text-align: center;
@@ -20,6 +24,7 @@
       border-radius: 50%;
       padding: 5px;
       margin: auto;
+      align: center
     }
     .caption {
       font-size: 10px;
@@ -31,7 +36,7 @@
   </head>
   
 <body>
- <div><h1>WHOA! A web page!</h1></div>
+ <div id="begin"><h1>WHOA! A web page!</h1></div>
   
   <p>This is my 5th web page for Web Mapping and my fifth lab at MSU Denver. Boom, boom.</p>
 
