--- a/lab502.html
+++ b/lab502.html
@@ -7,15 +7,16 @@
     body { width: 100%;}
     #begin {
       font-size: 30px;
-      font-color: #800080;
+      font-color: purple;
+      align: center;
     }
     #intro {
-      70%;
       text-align: center;
       margin: 10px auto;
     }
-    #photo {
-      align: center; 
+    #Anime Progress {
+      align: center;
+      width: 100%;
     }
     #circles {
       height: 700px;
@@ -23,8 +24,8 @@
       border: 1px solid #000000;
       border-radius: 50%;
       padding: 5px;
+      display: block;
       margin: auto;
-      align: center
     }
     .caption {
       font-size: 10px;
@@ -70,15 +71,15 @@
           <th>Watch Status</th>
         </tr>
         <tr>
-          <td>Vinland Saga  </td>
+          <td>Vinland Saga</td>
             <td>Watched</td>
         </tr>
         <tr>
-          <td>Overlord  </td>
+          <td>Overlord</td>
             <td>Unwatched</td>
         </tr>
         <tr>
-          <td>Attack on Titan  </td>
+          <td>Attack on Titan</td>
              <td> One more painful part left</td>
         </tr>
      </table>
