--- a/lab502.html
+++ b/lab502.html
@@ -7,16 +7,12 @@
     body { width: 100%;}
     #begin {
       font-size: 30px;
-      font-color: purple;
+      color: purple;
       align: center;
     }
     #intro {
       text-align: center;
       margin: 10px auto;
-    }
-    #Anime Progress {
-      align: center;
-      width: 100%;
     }
     #circles {
       height: 700px;
