--- a/lab503.html
+++ b/lab503.html
@@ -1,8 +1,51 @@
 <DOCTYPE html>
 <html>
 <head>
-  <title>My fourth web page.</title>
+  <title>My 6th web page.</title>
   </head>
+  <style>
+    body
+    h1 { font-family: Helvetica, Arial, times, serif;
+     font-size: 30px;
+     font-style: italic;
+     font-weight: bold;
+    color: purple;
+   }
+h3 { font-family: Helvetica, Arial, times, serif;
+     font-size: 15px;
+     font-weight: bold;
+   }
+    p { margin-top: 100px;
+    margin-bottom: 100px;
+    margin-right: 150px;
+    margin-left: 80px;
+  }
+td, th { 
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-right: 150px;
+    margin-left: 80px;
+    padding: 10px 10px 5px 5px;
+  }
+ #intro {
+      text-align: center;
+      margin: 10px auto;
+    }
+    #circles {
+      height: 700px;
+      width: 500px;
+      border: 1px solid #000000;
+      border-radius: 50%;
+      padding: 5px;
+      display: block;
+      margin: auto;
+    }
+    .caption {
+      font-size: 10px;
+      font-text: Times;
+      text-align: center;
+    }
+  </style>
   
 <body>
   <h1> WHOA! A web page!</h1>
