--- a/lab601.html
+++ b/lab601.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
 <html>
 <head>
-  <title>My 6th web page.</title>
+  <title>My seventh web page.</title>
   </head>
   <style>
     body
@@ -52,6 +52,11 @@ td, th {
 <script>
 $(document).ready(function() {
 //This is where I will start my code.
+  //do this when we click on the clicktosee1 button
+  $("clicktosee1").click(function() {
+  });
+    //run this when I click the button
+    $("clicktosee1").html("Jujutsu Kaisen :( );
 });
 </script>
 
@@ -59,7 +64,7 @@ $(document).ready(function() {
 <body>
   <h1> WHOA! A web page!</h1>
   
-  <p>This is my fourth web page for Web Mapping and my fifth lab at MSU Denver. Boom, boom.</p>
+  <p>This is my seventh web page for Web Mapping and my sixth lab at MSU Denver. Boom, boom.</p>
 
   <div id="container">
   <h3>About Me</h3>
@@ -72,7 +77,7 @@ $(document).ready(function() {
      <ul>
    <li>Reading</li>
    <li>Painting</li>
-   <li>Jujutsu Kaisen :(</li>
+   <li><button id="clicktosee1">Click to see...</button>button></li>
      </ul>
     </div>
     
