--- a/lab601.html
+++ b/lab601.html
@@ -56,7 +56,7 @@ $(document).ready(function() {
   $("clicktosee1").click(function() {
   });
     //run this when I click the button
-    $("clicktosee1").html("Jujutsu Kaisen :( );
+    $("clicktosee1").html("Jujutsu Kaisen :(");
 });
 </script>
 
