--- a/lab601.html
+++ b/lab601.html
@@ -52,9 +52,9 @@ td, th {
 <script>
 $(document).ready(function() {
 //This is where I will start my code.
+  });
   //do this when we click on the clicktosee1 button
   $("clicktosee1").click(function() {
-  });
     //run this when I click the button
     $("clicktosee1").html("Jujutsu Kaisen :(");
 });
@@ -77,7 +77,7 @@ $(document).ready(function() {
      <ul>
    <li>Reading</li>
    <li>Painting</li>
-   <li><button id="clicktosee1">Click to see...</button>button></li>
+   <li><button id="clicktosee1">Click to see...</button></li>
      </ul>
     </div>
     
