--- a/lab601.html
+++ b/lab601.html
@@ -53,11 +53,12 @@ td, th {
 $(document).ready(function() {
 //This is where I will start my code.
   });
-  //do this when we click on the clicktosee1 button
+  
+//do this when we click on the clicktosee1 button
   $("clicktosee1").click(function() {
-    //run this when I click the button
-    $("clicktosee1").html("Jujutsu Kaisen :(");
-});
+    //run this when I click this button
+   $("clicktosee1").html("Jujutsu Kaisen :(");
+  });
 </script>
 
   
