--- a/lab601.html
+++ b/lab601.html
@@ -50,18 +50,15 @@ td, th {
   </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script>
-$(document).ready(function() {
 //This is where I will start my code.
-  });
-  
+
 //do this when we click on the clicktosee1 button
-  $("clicktosee1").click(function() {
-    //run this when I click this button
-   $("clicktosee1").html("Jujutsu Kaisen :(");
+  $("#clicktosee1").click(function() {
+  //run this when I click this button
+  $("clicktosee1").html("Jujutsu Kaisen :(");
   });
 </script>
 
-  
 <body>
   <h1> WHOA! A web page!</h1>
   
