--- a/lab601.html
+++ b/lab601.html
@@ -50,13 +50,14 @@ td, th {
   </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script>
-//This is where I will start my code.
+//This is where I will start my JavaScript code
 
-//do this when we click on the clicktosee1 button
-  $("#clicktosee1").click(function() {
+//do this when we click on the clicktoreveal1 button
+  $("#clicktoreveal1").click(function() {
   //run this when I click this button
-  $("clicktosee1").html("Jujutsu Kaisen :(");
+  $("clicktoreveal1").html("Jujutsu Kaisen :(");
   });
+  
 </script>
 
 <body>
@@ -75,7 +76,7 @@ td, th {
      <ul>
    <li>Reading</li>
    <li>Painting</li>
-   <li><button id="clicktosee1">Click to see...</button></li>
+   <li><button id="clicktoreveal1">Click to see</button></li>
      </ul>
     </div>
     
