--- a/lab601.html
+++ b/lab601.html
@@ -51,11 +51,13 @@ td, th {
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script>
 //This is where I will start my JavaScript code
+console.log("started Javascript");
 
-//do this when we click on the clicktoreveal1 button
-  $("#clicktoreveal1").click(function() {
-  //run this when I click this button
-  $("clicktoreveal1").html("Jujutsu Kaisen :(");
+//do this when we click on the clicktosee1 button
+  $("#clicktosee1").click(function() {
+    //run this when  click on this button
+    console.log("clicked on the 1st button");
+  $("#clicktosee1").html("Please, hold the applause.");
   });
   
 </script>
@@ -113,7 +115,7 @@ td, th {
 
     <a href="https://www.eggradients.com/tool/benedict-cumberbatch-name-generator">the Benedict Cumberbatch Name Generator</a>
     
-  <p>I have written more information about myself. Please, hold the applause. I hope I have provided more entertainment.</p>
+  <p>I have written more information about myself. <button id="clicktosee1">Click to see...</button></p>
   </h3>
 
 </div>
