--- a/lab601.html
+++ b/lab601.html
@@ -53,11 +53,11 @@ td, th {
 //This is where I will start my JavaScript code
 console.log("started Javascript");
 
-//do this when we click on the clicktosee1 button
-  $("#clicktosee1").click(function() {
+//do this when we click on the clicktoreveal1 button
+  $("#clicktoreveal1").click(function() {
     //run this when  click on this button
     console.log("clicked on the 1st button");
-  $("#clicktosee1").html("Please, hold the applause.");
+  $("#clicktoreveal1").html("Please, hold the applause.");
   });
   
 </script>
@@ -78,7 +78,7 @@ console.log("started Javascript");
      <ul>
    <li>Reading</li>
    <li>Painting</li>
-   <li><button id="clicktoreveal1">Click to see</button></li>
+   <li>Jujustu Kaisen : ( </li>
      </ul>
     </div>
     
@@ -115,7 +115,7 @@ console.log("started Javascript");
 
     <a href="https://www.eggradients.com/tool/benedict-cumberbatch-name-generator">the Benedict Cumberbatch Name Generator</a>
     
-  <p>I have written more information about myself. <button id="clicktosee1">Click to see...</button></p>
+  <p>I have written more information about myself. <button id="#clicktoreveal1">Click to reveal</button></p>
   </h3>
 
 </div>
