--- a/lab601.html
+++ b/lab601.html
@@ -118,7 +118,7 @@ td, th {
 
     <a href="https://www.eggradients.com/tool/benedict-cumberbatch-name-generator">the Benedict Cumberbatch Name Generator</a>
     
-  <p>I have written more information about myself. <button id="#clicktoreveal1">Click to reveal</button></p>
+  <p>I have written more information about myself. <button id="clicktoreveal1">Click to reveal...</button></p>
   </h3>
 
 </div>
