--- a/lab601.html
+++ b/lab601.html
@@ -59,7 +59,10 @@ td, th {
       //run this when click on this button
       console.log("clicked on the 1st button");
     $("#clicktoreveal1").html("Please, hold the applause.");
+    $("#clicktoreveal1").click( function() {
+           // if someone clicks on clicktoreveal1, this runs!
 
+        });
   //closing the document.ready
   });
   });
