--- a/lab601.html
+++ b/lab601.html
@@ -58,7 +58,7 @@ td, th {
     $("#clicktoreveal1").click(function() {
       //run this when click on this button
       console.log("clicked on the 1st button");
-    $("#clicktoreveal1").html("Please, hold the applause.");
+    $("#div_ctr1").html("Please, hold the applause.");
       });
     
     $("#clicktoreveal1").click(function() {
@@ -122,7 +122,7 @@ td, th {
 
     <a href="https://www.eggradients.com/tool/benedict-cumberbatch-name-generator">the Benedict Cumberbatch Name Generator</a>
     
-  <p>I have written more information about myself. <button id="clicktoreveal1">Click to reveal...</button></p>
+  <p>I have written more information about myself.<div id="div_ctr1"> <button id="clicktoreveal1">Click to reveal...</button><\div></p>
   </h3>
 
 </div>
