--- a/lab601.html
+++ b/lab601.html
@@ -61,7 +61,7 @@ td, th {
     $("#div_ctr1").html("Please, hold the applause.");
       });
     
-    $("#clicktoreveal1").click(function() {
+    $("#div_ctr1").click(function() {
            // if someone clicks on clicktoreveal1, this runs!
       });
   
@@ -124,7 +124,5 @@ td, th {
     
   <p>I have written more information about myself.<div id="div_ctr1"> <button id="clicktoreveal1">Click to reveal...</button><\div></p>
   </h3>
-
-</div>
 </body>
 </html>
