--- a/lab601.html
+++ b/lab601.html
@@ -60,6 +60,11 @@ td, th {
       console.log("clicked on the 1st button");
     $("#div_ctr1").html("Please, hold the applause.");
       });
+    // toggle the picture on and off
+       $("#togglephoto").click(function () {
+         console.log("toggle the picture");
+         $("#circles").fadeToggle(100);
+       });
     //closing the document.ready
   });
 </script>
