--- a/lab601.html
+++ b/lab601.html
@@ -62,10 +62,10 @@ td, th {
       });
     // hide and show the picture
     $("#hide").click(function(){
-    $("circles").hide(1000);
+    $("#circles").hide(1000);
       });
     $("#show").click(function(){
-    $("circles").show(1000);
+    $("#circles").show(1000);
       });
     //closing the document.ready
   });
