--- a/lab601.html
+++ b/lab601.html
@@ -62,10 +62,14 @@ td, th {
       });
     // hide and show the picture
     $("#hide").click(function(){
-    $("#circles").hide(1000);
+    $("#img").hide(1000);
+      //when clicked this should hide the picture
+      console.log("hide the picture")
       });
     $("#show").click(function(){
-    $("#circles").show(1000);
+    $("#img").show(1000);
+      //when clicked this should show the picture
+      console.log("show the picture")
       });
     //closing the document.ready
   });
