--- a/lab601.html
+++ b/lab601.html
@@ -62,14 +62,14 @@ td, th {
       });
     
     // hide and show the picture
-    $("#hide/show picture").click(function(){
+    $("#hide").click(function(){
       console.log("hide the picture")
     $("#circles").hide(slow);
       //when clicked this should hide the picture
       });
     
-    $("#hide/show picture").click(function(){
-    $("img").show(fast);
+    $("#show").click(function(){
+    $("#circles").show(fast);
       //when clicked this should show the picture
       console.log("show the picture")
       });
@@ -126,7 +126,8 @@ td, th {
     <img id="circles" src="circles.png">
       <p class="caption">Circles<p/>
       <p class="caption">Art by Me</p>
-      <button id="hide/show picture">Hide/Show Picture</button>
+      <button id="hidepicture">Hide</button>
+      <button id="show">Show</button>
     </div>
 
     <a href="https://www.eggradients.com/tool/benedict-cumberbatch-name-generator">the Benedict Cumberbatch Name Generator</a>
