--- a/lab601.html
+++ b/lab601.html
@@ -64,12 +64,12 @@ td, th {
     // hide and show the picture
     $("#hide").click(function(){
       console.log("hide the picture")
-    $("#circles").hide(slow);
+    $("#circles").hide(2000);
       //when clicked this should hide the picture
       });
     
     $("#show").click(function(){
-    $("#circles").show(fast);
+    $("#circles").show(2000);
       //when clicked this should show the picture
       console.log("show the picture")
       });
