--- a/lab601.html
+++ b/lab601.html
@@ -126,7 +126,7 @@ td, th {
     <img id="circles" src="circles.png">
       <p class="caption">Circles<p/>
       <p class="caption">Art by Me</p>
-      <button id="hidepicture">Hide</button>
+      <button id="hide">Hide</button>
       <button id="show">Show</button>
     </div>
 
