--- a/lab601.html
+++ b/lab601.html
@@ -54,6 +54,12 @@ td, th {
     //This is where I will start my JavaScript code
     console.log("started Javascript");
 
+    $("#appear").click( function() {
+           // if someone clicks on appear, this runs!
+           console.log("someone clicked on button appear.");
+           $("#hidden_text").text("(drumroll please)");
+        });
+
   //do this when we click on the clicktoreveal1 button
     $("#clicktoreveal1").click(function() {
       //run this when click on this button
@@ -97,7 +103,7 @@ td, th {
      </ul>
     </div>
     
-<h3><p> For my next trick, I shall attempt... (drumroll please) a table of all the animes I need to watch. It will probably never be finished and I will definitely not add the entire thing since it is very long.</p></h3>
+<h3><p> For my next trick, I shall attempt...(drumroll please) a table of all the animes I need to watch. It will probably never be finished and I will definitely not add the entire thing since it is very long.</p></h3>
 
     <div id="Anime Progress">
       <table>
