--- a/lab601.html
+++ b/lab601.html
@@ -57,7 +57,7 @@ td, th {
     $("#appear").click( function() {
            // if someone clicks on appear, this runs!
            console.log("someone clicked on button appear.");
-           $("#hidden_text").text("(drumroll please)");
+           $("#hidden_text").text("You're killing me, Smalls!");
         });
 
   //do this when we click on the clicktoreveal1 button
