--- a/hangman.html
+++ b/hangman.html
@@ -3,23 +3,28 @@
   <head>
     <title>Hangman!</title>
     <style>
+      #title {margin: center;
+              font: 30px Veranda sans-serif;
+              font-color: purple;
+             }
       #alphabet { margin: auto;
                   padding: 20px; }
       #word { margin: auto;
-              font: 400em serif bold;
+              font: 400em Veranda sans-serif bold;
               padding: 20px;
             }
       #info { padding: 20px; 
+              font: Veranda sans-serif;
               font-color: red;
-              background-color: yellow; 
+              background-color: AFEEEE; 
             }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
          $(document).ready( function() {
               // this is the secret word!
-              word =  "y o u r w o r d";
-              blank = "- - - - - - - -";
+              word =  "comeuppance";
+              blank = "- - - - - - - - - - -";
               $("#word").text(blank);
 
               // this is the list of letters that have been tried
@@ -42,23 +47,24 @@
                       $("#info").text("");
                 
                     // use text to get the letter that was clicked on
-                      letter = $(this) 
-
-
-                    
+                      letter = $(this).text()
+                      console.log ("clicked on ", letter")
 
                     // make a line through the letter
+                      $(this).css("text-decoration"' "line-through")
 
                     // if the letter has already been clicked on, 
                     // let the user know it's already been tried
                     if (triedLetters.includes(letter)) {
+                      $("#info").text("Letter "+letter" already tried!");
 
                     // if the letter isn't in the word, reduce
                     // the number of tries and check if they lost
                     } else if (! word.includes(letter)) {
 
                       // reduce the number of remaining tries by 1
-
+                     tries = tries - 1
+                      $("#guesses").text("Guesses left: "+tries");
 
                       // are they out of tries? then they lost!
 
@@ -92,7 +98,7 @@
     </script>
   </head>
   <body>
-     <h1>Let's play Hangman!</h1>
+    <div id= "title"><h1>Let's Play Hangman!</h1></div>
      <div id="guesses"></div>
      <div id="info"></div>
      <div id="word"></div>
