--- a/hangman.html
+++ b/hangman.html
@@ -18,6 +18,12 @@
               font: 400em sans-serif bold;
               padding: 20px;
             }
+      #welcome { margin-left: 20px
+                 margin-right: 20px
+                 margin-top: 15px
+                 margin-bottom: 15px;
+                 font-color: 9932CC;
+               }
       #info { padding: 20px; 
               font: sans-serif;
               font-color: red;
@@ -103,9 +109,10 @@
     </script>
   </head>
   <body>
-    <div id= "intro"><h1>Let's Play HANGMAN!</h1></div>
+     <div id="intro"><h1>Let's Play HANGMAN!</h1></div>
      <div id="guesses">10 Guesses left</div>
-     <div id="info"><p>Welcome to HANGMAN! You have 10 chances to spell the mystery word correctly!</p></div>
+     <div id="welcome"><p><h3>Welcome to HANGMAN! You have 10 chances to spell the mystery word correctly!</h3></p></div>
+     <div id="info"></div>
      <div id="word"></div>
      <div id="alphabet"><p>Click to make a guess!</p>
      <span class="letter" id="a">a</span>
