--- a/hangman.html
+++ b/hangman.html
@@ -4,13 +4,14 @@
     <title>Hangman!</title>
     <style>
       #intro {
-  font: sans-serif;
+  font-family: Helvetica, Arial, times, serif;
               color: purple;
              }
       #alphabet {
         margin: center;
                   margin: auto;
                   padding: 20px;
+                  border: 5px solid lightgreen;
                   font: sans-serif;
                   color: purple;
                   }
