--- a/hangman.html
+++ b/hangman.html
@@ -12,7 +12,7 @@
                   margin: auto;
                   padding: 20px;
                   border: 5px solid lightgreen;
-                  font: sans-serif;
+                  font-family: Helvetica, Arial, times, serif;
                   color: purple;
                   }
       #word {
@@ -20,7 +20,8 @@
               margin-right: 2 inches;
               margin-top: 1 inches;
               margin-bottom: 1 inches;
-              font: 400em sans-serif bold;
+              font: 400em;
+        font-family: Helvetica, Arial, times, serif bold;
               padding: 20px;
             }
       #welcome {
@@ -28,11 +29,12 @@
               margin-right: 2 inches;
               margin-top: 1 inches;
               margin-bottom: 1 inches;
+        font-family: Helvetica, Arial, times, serif;
                  color: purple;
                }
       #info {
       padding: 20px;
-              font: sans-serif;
+              font-family: Helvetica, Arial, times, serif;
               color: red;
               background-color: yellow;
               }
