--- a/hangman.html
+++ b/hangman.html
@@ -7,28 +7,37 @@
   font-family: Helvetica, Arial, times, serif;
               color: purple;
              }
+      #guesses {font-family: Helvetica, Arial, times, serif;
+              color: purple;
+                margin-left: 60px;
+              margin-right: 50px;
+              margin-top: 30px;
+              margin-bottom: 30px
+               }
       #alphabet {
-        margin: center;
-                  margin: auto;
+                  margin-left: 60px;
+              margin-right: 50px;
+              margin-top: 30px;
+              margin-bottom: 30px
                   padding: 20px;
                   border: 5px solid lightgreen;
                   font-family: Helvetica, Arial, times, serif;
                   color: purple;
                   }
       #word {
-        margin-left: 2 inches;
-              margin-right: 2 inches;
-              margin-top: 1 inches;
-              margin-bottom: 1 inches;
+        margin-left: 60px;
+              margin-right: 50px;
+              margin-top: 30px;
+              margin-bottom: 30px;
               font: 400em;
         font-family: Helvetica, Arial, times, serif bold;
               padding: 20px;
             }
       #welcome {
-      margin-left: 2 inches;
-              margin-right: 2 inches;
-              margin-top: 1 inches;
-              margin-bottom: 1 inches;
+      margin-left: 60px;
+              margin-right: 50px;
+              margin-top: 30px;
+              margin-bottom: 30px;
         font-family: Helvetica, Arial, times, serif;
                  color: purple;
                }
@@ -37,6 +46,10 @@
               font-family: Helvetica, Arial, times, serif;
               color: red;
               background-color: yellow;
+        margin-left: 60px;
+              margin-right: 50px;
+              margin-top: 30px;
+              margin-bottom: 30px
               }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
