--- a/hangman.html
+++ b/hangman.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <html>
   <head>
     <title>Hangman!</title>
@@ -56,13 +56,13 @@
     <script>
          $(document).ready( function() {
               // this is the secret word!
-              word =  "comeuppance";
+              word =  "c o m e u p p a n c e";
               blank = "- - - - - - - - - - -";
               $("#word").text(blank);
            console.log("blank not responding")
 
               // this is the list of letters that have been tried
-              triedLetters = ""
+              triedLetters = "";
 
               // this is the number of tries left
               tries = 10;
@@ -81,18 +81,20 @@
                       $("#info").text("");
                 
                     // use text to get the letter that was clicked on
-                      letter = $(this).text()
+                      letter = $(this).text();
                       console.log ("clicked on letter")
+                      console.log ("letter clicks not working")
 
                     // make a line through the letter
-                      $(this).css("text-decoration" "line-through")
+                      $(this).css("text-decoration", "line-through");
 
                     // if the letter has already been clicked on, 
                     // let the user know it's already been tried
                     if (triedLetters.includes("letter")) {
                       $("#info").text("Letter "+letter+" already tried!");
 
-                    // if the letter isn't in the word, reduce the number of tries and check if they lost
+                    // if the letter isn't in the word
+                    // reduce the number of tries and check if they lost
                     } else if (! word.includes("letter")) {
 
                       // reduce the number of remaining tries by 1
