--- a/hangman.html
+++ b/hangman.html
@@ -67,7 +67,8 @@
               // this is the number of tries left
               tries = 10;
               $("#guesses").text("Guesses left: "+tries");
-         }
+          )
+              console.log("close parenthesis")
 
               // boolean (true / false variable) to track if game has been won or lost
               gameWon = false;
