--- a/hangman.html
+++ b/hangman.html
@@ -66,7 +66,7 @@
 
               // this is the number of tries left
               tries = 10;
-              $("#guesses").text("Guesses left: "+tries");
+              $("#guesses").text("Guesses left: "+tries+");
           )
               console.log("close parenthesis")
 
