--- a/hangman.html
+++ b/hangman.html
@@ -66,9 +66,7 @@
 
               // this is the number of tries left
               tries = 10;
-              $("#guesses").text("Guesses left: "+tries+");
-          )
-              console.log("close parenthesis")
+              $("#guesses").text("Guesses left: "+tries+"");
 
               // boolean (true / false variable) to track if game has been won or lost
               gameWon = false;
