--- a/hangman.html
+++ b/hangman.html
@@ -78,13 +78,11 @@
                   // check if the game has been won or lost
                   if (gameWon != true && gameLost != true) {
                     // erase the info box
-                      $("#info").text("");
+                      $("#info").text(" ");
                 
                     // use text to get the letter that was clicked on
-                      letter = $(this).text("");
+                      letter = $(this).text(" ");
                       console.log ("clicked on letter")
-                      console.log ("letter clicks operating")
-                      console.log ("+letter+ clicked")
 
                     // make a line through the letter
                       $(this).css("text-decoration", "line-through");
@@ -118,7 +116,16 @@
                       // with the letter that was clicked on
                       // replace the blanks with letter in blank
                       // and replace the letters with blanks in word
+                      while (word.includes (letter)) {
+                       index = word.indexOf (letter);
+                       console.log("index of word is ", index");
+                       word = word.substring(0, index) + " " + word.substring ((index + 1));
+                       blank = blank.substring(0,index) + letter + blank.substring ((index + 1));
 
+                       $("#word").text(blank);
+                       console.log ("word is ", word"");
+                       console.log ("blank is ", blank"");
+                      }
                      
                       // check if the player has won the game
 
