--- a/hangman.html
+++ b/hangman.html
@@ -86,7 +86,7 @@
 
                     // make a line through the letter
                       $(this).css("text-decoration", "line-through");
-                      console.log(""line-through" not working");
+                      console.log("line-through not working");
 
                     // if the letter has already been clicked on, 
                     // let the user know it's already been tried
